--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "deep-diff": "^1.0.1",
+    "flow-bin": "^0.77.0",
     "lodash": "^4.17.10",
+    "react-component-tree": "^2.0.0-beta.14",
     "react-test-renderer": "^16.4.2"
   },
   "peerDependencies": {
