--- a/example/package.json
+++ b/example/package.json
@@ -7,9 +7,10 @@
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
     "react-deep-diff": "link:..",
-    "react-scripts": "^1.1.1"
+    "react-dom": "^16.2.0",
+    "react-scripts": "^1.1.1",
+    "styled-components": "^3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
