--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-deep-diff",
-  "version": "1.0.0",
+  "name": "react-visual-diff",
+  "version": "0.0.1",
   "description": "A react component that can render a diff of two react components",
   "author": "juliankrispel",
   "license": "MIT",
