--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-visual-diff",
-  "version": "0.3.7",
+  "version": "0.3.8",
   "description": "A react component that can render a diff of two react components",
   "author": "juliankrispel",
   "license": "MIT",
@@ -20,7 +20,8 @@
   "dependencies": {
     "diff": "^3.5.0",
     "flatted": "^1.0.2",
-    "lodash": "^4.17.10"
+    "lodash": "^4.17.10",
+    "react-is": "^16.6.0"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
